# chumsky-helpers

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  deny.toml  devbox.json  mise.toml  pyproject.toml  ruff.toml
.cursor/: environment.json
.cursor/rules/: project-overview.mdc  rust
.cursor/rules/rust/: bon_patterns.mdc
core/: Cargo.toml
core/proptest-regressions/: datetime.txt  literal.txt
core/src/: datetime.rs  lib.rs  literal.rs  number.rs
docs/: more-chumsky-helpers-checklist.md
proptest-regressions/: literal.txt  number.txt
scripts/: cov.sh  coverage_summary.py
src/: datetime.rs  esc.rs  eval.rs  expr.rs  lib.rs  literal.rs  number.rs  stateful_strings.rs
tests/: datetime_iso_duration_components.rs  number_component_preservation.rs  number_decimals.rs  number_integers.rs  number_large.rs  number_scientific.rs  stateful_strings_cooked.rs  stateful_strings_raw.rs
tests/common/: mod.rs
tests/fixtures/stateful_strings/cooked_multi/: 01_basic.txt  02_hash_prefix.txt
tests/snapshots/: stateful_strings_cooked__cooked_multi_line_fixtures@01_basic.txt.snap.new  stateful_strings_cooked__cooked_multi_line_fixtures@02_hash_prefix.txt.snap.new
