[package]
name = "chumsky-helpers"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
ariadne = "0.5.1"
chumsky = { version = "0.10.1", default-features = false, features = [
    "bytes",
    "either",
    "lexical-numbers",
    "memoization",
    "pratt",
    "regex",
    "serde",
    "stacker",
    "std",
] }
num = "0.4.3"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
thiserror = "2.0.12"
time = "0.3.41"

[dev-dependencies]
proptest = "1.6"
rstest = "0.25"
bon = "3.6"
test-case = "3.3.1"

[lib]
path = "src/lib.rs"
