[package]
name = "chumsky-helpers"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
ariadne = "0.5.1"
chumsky = { version = "1.0.0-alpha.8", default-features = false, features = [
    "extension",
    "memoization",
    "pratt",
    "std",
    "sync",
] }
thiserror = "2.0.12"
time = "0.3.41"

[dev-dependencies]
proptest = "1.6"
test-case = "3.3.1"

[lib]
path = "src/lib.rs"
